# ReaShoot

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Info.plist  Makefile  README.md
.github/workflows/: desktop-portability.yml
desktop/core/reaphone/: audio_align.cpp  audio_align.h  control_protocol.cpp  control_protocol.h  debug_logger.cpp  debug_logger.h  http_download.cpp  http_download.h  http_headers.cpp  http_headers.h  json.cpp  json.h  plugin_settings.cpp  plugin_settings.h  preview_panel.h  preview_renderer.h  sha256.cpp  sha256.h  webrtc_receiver.h  websocket.cpp  websocket.h
desktop/core/reashoot/: audio_align.cpp  audio_align.h  control_protocol.cpp  control_protocol.h  debug_logger.cpp  debug_logger.h  http_download.cpp  http_download.h  http_headers.cpp  http_headers.h  json.cpp  json.h  plugin_settings.cpp  plugin_settings.h  preview_panel.h  preview_renderer.h  sha256.cpp  sha256.h  webrtc_receiver.h  webrtc_sdp.cpp  webrtc_sdp.h  websocket.cpp  websocket.h
desktop/core/tests/: audio_align_tests.cpp  control_client_tests.cpp  debug_logger_tests.cpp  download_tests.cpp  event_tests.cpp  helper_launcher_tests.cpp  http_headers_tests.cpp  loopback_ws_server.h  plugin_settings_tests.cpp  preview_tests.cpp  process_tests.cpp  protocol_tests.cpp  recording_downloader_tests.cpp  webrtc_sdp_tests.cpp  websocket_frame_tests.cpp
desktop/helper/: reashoot_helper.cpp  video_sync_win.cpp
desktop/reaper_plugin/: reaphone_action_ids.h  reashoot_action_ids.h
docs/: portability-matrix.md  windows-port-plan.md
helper/: Package.resolved  Package.swift
helper/Sources/ReaShootCore/: ControlProtocol.swift
helper/Sources/VideoSyncCore/: Checksum.swift  ControlProtocol.swift
helper/Sources/WebRTCDependency/: Empty.swift
helper/Sources/reashoot-mac/: ControlClient.swift  Discovery.swift
helper/Sources/video-sync-mac/: ArgumentParser.swift  ControlClient.swift  DebugLog.swift  Discovery.swift  Downloader.swift  VideoSyncMacCLI.swift
iphone/: .gitignore  AGENTS.md  Package.swift  README.md
iphone/Apps/ReaShoot/: ContentView.swift  Info.plist  ReaShootApp.swift
iphone/Apps/iPhoneVideoSync/: ContentView.swift  Info.plist  iPhoneVideoSyncApp.swift
iphone/ReaShoot.xcodeproj/: project.pbxproj
iphone/Scripts/: app-store-upload.sh
iphone/Sources/ReaShootCore/: Checksum.swift  ControlProtocol.swift
iphone/Sources/ReaShootKit/: CaptureRecordingEngine.swift  HTTPRecordingServer.swift  LocalWebSocketServer.swift  PairingStore.swift  PreviewH264Encoder.swift  PreviewStreamServer.swift  ReaShootService.swift  RecordingStore.swift  WebRTCPreviewSession.swift
iphone/Sources/VideoSyncCore/: ControlProtocol.swift  FileState.swift
iphone/Sources/iPhoneVideoSyncKit/: CaptureRecordingEngine.swift  HTTPRecordingServer.swift  LocalWebSocketServer.swift  RecordingStore.swift  WebRTCPreviewSession.swift  iPhoneVideoSyncService.swift
iphone/Sources/reashoot-mac/: ArgumentParser.swift  DebugLog.swift  Discovery.swift  Downloader.swift  ReaShootMacCLI.swift
iphone/Sources/video-sync-mac/: ControlClient.swift  DebugLog.swift  Downloader.swift  USBMux.swift  VideoSyncMacCLI.swift
iphone/Tests/ReaShootCoreTests/: ControlProtocolTests.swift
iphone/Tests/VideoSyncCoreTests/: ControlProtocolTests.swift
iphone/iPhoneVideoSync.xcodeproj/: project.pbxproj
scripts/: check_mirrored_swift.sh
src/: reaper_video_recorder.mm  reashoot.mm
src/app/mac/: Info.plist  ReaShootDesktopApp.mm  ReaShootMacIntegrationServer.h  ReaShootMacIntegrationServer.mm  ReaShootMacSupport.h  ReaShootMacSupport.mm  ReaShootMacUI.h  ReaShootMacUI.mm  ReaShootPreviewView.h  ReaShootPreviewView.mm
src/app/win32/: ReaShootDesktopWin32.cpp  ReaShootWin32IntegrationServer.cpp  ReaShootWin32IntegrationServer.h  ReaShootWin32Support.cpp  ReaShootWin32Support.h
src/core/: alignment_math.cpp  alignment_math.h  capture_profile.cpp  capture_profile.h  control_protocol.cpp  control_protocol.h  h264_annex_b.cpp  h264_annex_b.h  helper_output_parser.cpp  helper_output_parser.h  json_value.cpp  json_value.h  log_sanitization.cpp  log_sanitization.h  path_utils.cpp  path_utils.h  platform_interfaces.h  reashoot_controller.cpp  reashoot_controller.h  reashoot_status.cpp  reashoot_status.h  remote_camera.cpp  remote_camera.h  ui_interfaces.h
src/core/camera_transport/: checksum.cpp  checksum.h  control_client.cpp  control_client.h  discovery.cpp  discovery.h  downloader.cpp  downloader.h  socket_utils.cpp  socket_utils.h
src/desktop/: desktop_api_client.cpp  desktop_api_client.h  desktop_app_controller.cpp  desktop_app_controller.h  desktop_app_model.cpp  desktop_app_model.h  desktop_integration_api.cpp  desktop_integration_api.h  desktop_services.h  desktop_workflow.cpp  desktop_workflow.h
src/helper/: checksum.cpp  checksum.h  control_client.cpp  control_client.h  discovery.cpp  discovery.h  downloader.cpp  downloader.h  reashoot_mac.cpp  socket_utils.cpp  socket_utils.h
src/platform/ffmpeg/: ffmpeg_playback_preview.cpp  ffmpeg_playback_preview.h
src/platform/mac/: mac_h264_preview_renderer.h  mac_h264_preview_renderer.mm  mac_helper_process.h  mac_helper_process.mm  mac_media_audio_reader.h  mac_media_audio_reader.mm  mac_modal_prompts.h  mac_modal_prompts.mm  mac_playback_preview_renderer.h  mac_playback_preview_renderer.mm  mac_preview_stream_client.h  mac_preview_stream_client.mm  mac_reashoot_panel.h  mac_reashoot_panel.mm
src/platform/swell/: swell_panel_probe.cpp  swell_panel_probe.h  swell_runtime.h  swell_runtime.mm  swell_runtime_win32.cpp
src/platform/win32/: reaper_reashoot_win32.cpp  win32_h264_preview_renderer.cpp  win32_h264_preview_renderer.h  win32_helper_process.cpp  (+6 more)
src/reaper/: reaper_host.cpp  reaper_host.h  reaper_recording_controller.cpp  reaper_recording_controller.h
src/windows/: preview_panel_win32.cpp  preview_panel_win32.h  reaphonevideo_win_skeleton.cpp  reashoot_win_skeleton.cpp  settings_dialog_win32.cpp  settings_dialog_win32.h  webrtc_receiver_libwebrtc.cpp  webrtc_receiver_libwebrtc.h
tests/: core_tests.cpp  gui_drift_guard.cmake
(+18 files in other folders)
